--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,11 @@
 page-login {
+ 
+}
 
+#img_logo {
+    width:200px;
+    height:70px; 
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
